index.css
@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap");

:root {
    --nav-color: #004682;
    --nav-text: #fff;
    --primary-color: #fff;
    --secondary-color: #D2D4D6;
    --hover-color: #0096C8;
}

*,
*::before,
*::after {
    padding: 0;
    margin: 0;
}

body {
    background-color: var(--primary-color);
}

a {
    text-decoration: none;
}

.content {
    margin: 5%;
    margin-top: 2%;
}

.container {
    position: sticky;
    top: 0;
    overflow: hidden;
    background-color: var(--nav-color);
    font-size: 1.2rem;
    font-family: "Merriweather Sans", sans-serif;
    height: 70px;
    z-index: 1000;
}

.navbar {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 80%;
    margin: auto;
    justify-content: space-between;
}

.navbar ul {
    display: flex;
}

.mobile-profile {
    display: none;
}

.navbar ul li {
    list-style-type: none;
}

.container .navbar ul li {
    padding: 10px;
    margin: 0 10px;
}

.navbar a {
    color: var(--nav-text);
    font-weight: bold;
}

.navbar a:hover {
    color: var(--secondary-color);
}

.about .profile-pic {
    border-radius: 50%;
    padding-left: 5%;
}
.about .intro {
    display: flex;
}
.about .intro p {
    font-size: 1.7rem;
    padding-left: 5%;
    padding-top: 5%;
}

.carousel h1{
    text-align: center;
    padding-top: 1em;
    padding-bottom: 1em;
}

* {box-sizing: border-box}
.mySlides {display: none}
img {vertical-align: middle;}

/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next,.text {font-size: 11px}
}

.cards {
    display: flex;
    flex-wrap: wrap; /* allow items to wrap on smaller screens */
    justify-content: center;
    gap: 2rem;
    max-width: 1200px;
    margin: 2em auto;
    padding: 1rem;
    overflow: hidden; /* only enable scrolling inside the card content if necessary */
}

.flip-card {
  background-color: transparent;
  width: 350px;
  height: 500px;
  perspective: 1000px;
}


.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 5px;
}

.flip-card-back {
  transform: rotateY(180deg);
}

.card {
  border: 1px solid var(--nav-color);
  border-radius: 8px;
  overflow: hidden;
  background-color: white;
}

.card img {
  object-fit: cover;
  width: 100%;
  height: 200px;
}


.card h2 {
    margin: 0;
    padding: 5%;
}

.card .content {
    padding: 5%;
}

.card .card-footer {
    background-color: var(--nav-color);
    padding: 5%;
    text-align: center;
}

.card .card-footer a {
    color: var(--nav-text);
}

.card .card-footer a:hover {
    color: var(--secondary-color);
}

/* Responsive section for small screen like mobile devices */

@media screen and (min-width: 367px) and (max-width: 767px) {
    .profile-pic {
        display: none;
    }

    .mobile-profile {
        display: flex;
        vertical-align: middle;
        max-width: 70px;
        max-height: 70px;
        border-radius: 50%;
    }

    .container {
        height: 100%;
    }

    .container .navbar {
        flex-direction: column;
    }

    .about .intro img {
        height: 50%;
        width: 50%;
    }

    .contact-info{
        flex-direction: column;
    }

    .contact-info .info {
        flex-direction: column;
    }

}

.contact-info {
    padding-right: 5%;
    padding-top: 5%;
}

label,
textarea {
    font-size: 0.8rem;
    letter-spacing: 1px;
}

textarea {
    padding: 10px;
    max-width: 100%;
    line-height: 1.5;
    border-radius: 5px;
    border: 1px solid #ccc;
    box-shadow: 1px 1px 1px #999;
}

label {
    display: block;
    margin-bottom: 10px;
}

.send-message {
    border: 0;
    line-height: 2.5;
    padding: 0 20px;
    font-size: 1rem;
    text-align: center;
    color: #fff;
    text-shadow: 1px 1px 1px #000;
    border-radius: 10px;
    background-color: var(--nav-color );
    background-image: linear-gradient(
        to top left,
        rgb(0 0 0 / 0.2),
        rgb(0 0 0 / 0.2) 30%,
        rgb(0 0 0 / 0)
    );
    box-shadow:
        inset 2px 2px 3px rgb(255 255 255 / 0.6),
        inset -2px -2px 3px rgb(0 0 0 / 0.6);
}

.send-message:hover {
  background-color: var(--hover-color);
}

.send-message:active {
  box-shadow:
    inset -2px -2px 3px rgb(255 255 255 / 0.6),
    inset 2px 2px 3px rgb(0 0 0 / 0.6);
}

.contact-info img {
    max-width: 50px;
    max-height: 50px;
}

.contact-info {
    display: flex;
    align-items: center;
    justify-content: center;
    justify-content:space-around;
}

.info div p span {
    font-weight: 200;
    font-size: 1.2rem;
}

.main-footer {
    background-color: var(--secondary-color);
    text-align: center;
}

.main-footer span{
    text-align: center;
    font-size: 1.7rem;
}

.main-footer img {
    max-width: 50px;
    max-height: 50px;
}

.main-footer .social-media {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top:1em;
}

